force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__API_Version__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__API_Version__c</fullName>
    <description>This field is used to store the API Version of the provider.</description>
    <label>API Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>