force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Auto_Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Auto_Create_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is no longer in use.</description>
    <label>Auto Create Lead</label>
    <type>Checkbox</type>
</CustomField>