force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__By_Default_Mute__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__By_Default_Mute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to mute/unmute microphone by default.</description>
    <label>By Default Mute</label>
    <type>Checkbox</type>
</CustomField>