force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Call_Forwarding__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Forwarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Forwarding</label>
    <type>Checkbox</type>
</CustomField>