force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__CTI_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__CTI_Status__c</fullName>
    <description>This field is used to store the CTI user status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
            <value>
                <fullName>Oncall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>