force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Current_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Current_Status__c</fullName>
    <defaultValue>&apos;Online&apos;</defaultValue>
    <description>This field is used to store Current Status of CTI User.</description>
    <label>Current Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>