force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Incoming_Call_Flow__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Incoming_Call_Flow__c</fullName>
    <description>This field is used to control the incoming call flow like Single Number, Multi-Number, etc.</description>
    <label>Call Forwarding Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Forward</fullName>
                <default>true</default>
                <label>Single Number</label>
            </value>
            <value>
                <fullName>Simultaneously Ring</fullName>
                <label>Multi-Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>