force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Incoming_Call_Queue__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Incoming_Call_Queue__c</fullName>
    <description>This field hold the round robin queue users for a incoming call i.e. every time a incoming call comes in the same will be distrusted among queue user. Also user of this queue can make outgoing calls.</description>
    <label>Call Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>