force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Last_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Last_Status__c</fullName>
    <description>This field is used to store Last Status of CTI User.</description>
    <formula>RIGHT( tdc_cti__Previous_Status__c ,(LEN(tdc_cti__Previous_Status__c)-FIND(&quot;_&quot;, tdc_cti__Previous_Status__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Status</label>
    <type>Text</type>
</CustomField>