force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Notify_During_Call__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Notify_During_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to unable/disable notify call feature.</description>
    <label>Notify During Call</label>
    <type>Checkbox</type>
</CustomField>