force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Option_For_Time_Range__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Option_For_Time_Range__c</fullName>
    <label>Option For Time Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Enable Time Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>