force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Out_Of_Office_From__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Out_Of_Office_From__c</fullName>
    <description>This field is used to store Out Of Office from time for a CTI user.</description>
    <label>Out Of Office From</label>
    <length>80</length>
    <type>Text</type>
</CustomField>