force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Out_Of_Office_Multi_Number_Forwarding__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Out_Of_Office_Multi_Number_Forwarding__c</fullName>
    <description>Define up to 9 numbers in a comma separated list that will simultaneously ring when an incoming call comes in Salesforce.</description>
    <label>Out Of Office Multi Number Forwarding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>