force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Out_Of_Office_Voice_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Out_Of_Office_Voice_Type__c</fullName>
    <description>This field is used to store Out Of Office voicemail in male/female for text type voicemail message for a CTI user.</description>
    <label>Out Of Office Voice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>