force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Out_Of_Office_VoiceDrop_Text__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Out_Of_Office_VoiceDrop_Text__c</fullName>
    <description>This field is used to store Out Of Office text type voicemail for a CTI user.</description>
    <label>Out Of Office VoiceDrop Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>