force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Out_Of_Office_Voicemail_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Out_Of_Office_Voicemail_Type__c</fullName>
    <description>This field is used to store Out Of Office voicemail option i.e. voice/text for a CTI user</description>
    <label>Out Of Office Voicemail Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>