force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Recording__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Recording__c</fullName>
    <description>This field is used to enable/disable call recording for incoming/outgoing or both types of calls.</description>
    <label>Recording</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>