force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Routing_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Routing_Mechanism__c</fullName>
    <description>Control the routing mechanism of the call within a queue.</description>
    <label>Queue Routing Mechanism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simultaneous Ring</fullName>
                <default>true</default>
                <label>Simultaneous Ring</label>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>