force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Simultaneous_Calling_Numbers__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Simultaneous_Calling_Numbers__c</fullName>
    <description>Number(s) added here separated with commas, will ring at the same time as the SF soft phone. Up to  9 numbers are supported, which can be add&apos;l SF Numbers ,  personal cell phones or any outside number. If an outside number picks up the call though the call is assigned to the Primary User as there is no way to know anything else for a call answered outside of Salesforce.</description>
    <label>Add&apos;l Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>