force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Status_Track__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Status_Track__c</fullName>
    <description>This field is no longer in use.</description>
    <label>Status Track</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>