force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Voice_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Voice_Type__c</fullName>
    <description>This field is used to store the voice type i.e. mail/female for text type voicemail.</description>
    <label>Voice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>