force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__VoiceDrop__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__VoiceDrop__c</fullName>
    <description>This field is no longer in use.</description>
    <label>VoiceDrop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>VoiceMail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>