force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__VoiceDrop_Text__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__VoiceDrop_Text__c</fullName>
    <description>This field is used to store the text type voicemail message.</description>
    <label>VoiceDrop Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>