force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__Voicemail_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Voicemail_Type__c</fullName>
    <description>This field is used to store the voicemail type i.e. text/voice.</description>
    <label>Voicemail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>