force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_cti__VoiceRecordingId__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__VoiceRecordingId__c</fullName>
    <description>This field is used to store the voicemail recording id.</description>
    <label>VoiceRecordingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>