force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Allow_SMSApp_Number_Record_creation__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Allow_SMSApp_Number_Record_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow SMSApp Number Record creation</label>
    <type>Checkbox</type>
</CustomField>