force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Auto_Forward_Email__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Auto_Forward_Email__c</fullName>
    <label>Auto Forward Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>