force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__AutoForward_to_Mobile__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__AutoForward_to_Mobile__c</fullName>
    <label>AutoForward to Mobile</label>
    <type>Phone</type>
</CustomField>