force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Automation_Off__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Automation_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automation Off</label>
    <type>Checkbox</type>
</CustomField>