force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Country_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Country_Area_Code__c</fullName>
    <label>Country Area Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>