force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Default_Sender_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Default_Sender_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Sender Number</label>
    <type>Checkbox</type>
</CustomField>