force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Disable_Incoming_Setup__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Disable_Incoming_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Incoming Setup</label>
    <type>Checkbox</type>
</CustomField>