force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Email_Alert_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Email_Alert_To_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Alert To Owner</label>
    <type>Checkbox</type>
</CustomField>