force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Incoming_Server__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Incoming_Server__c</fullName>
    <label>Incoming Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>