force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Key__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Key__c</fullName>
    <label>Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>