force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__LastSyncDate__c</fullName>
    <label>LastSyncDate</label>
    <type>Date</type>
</CustomField>