force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Limit__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Limit__c</fullName>
    <inlineHelpText>Total messages allowed</inlineHelpText>
    <label>Limit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>