force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Limit_Option__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Limit_Option__c</fullName>
    <inlineHelpText>Message limit will depend on this value</inlineHelpText>
    <label>Limit Option</label>
    <length>18</length>
    <type>Text</type>
</CustomField>