force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Message_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message_Service_Id__c</fullName>
    <label>Message Service Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>