force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__New_Approach__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__New_Approach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Approach</label>
    <type>Checkbox</type>
</CustomField>