force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Number__c</fullName>
    <label>Number</label>
    <type>Phone</type>
</CustomField>