force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Provider__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Provider__c</fullName>
    <label>Provider</label>
    <length>20</length>
    <type>Text</type>
</CustomField>