force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Review_Date__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>