force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Review_Recorded__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Review_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Recorded</label>
    <type>Checkbox</type>
</CustomField>