force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Show_Usage_In_App__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Show_Usage_In_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Usage In App</label>
    <type>Checkbox</type>
</CustomField>