force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Sms_Count__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sms_Count__c</fullName>
    <label>Sms Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>