force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Sno__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sno__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Sno</label>
    <type>AutoNumber</type>
</CustomField>