force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Supported_Action_Types__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Supported_Action_Types__c</fullName>
    <description>This field is used to determine the type of Messages supported by the specific number, For example: if this field is null , the number will have SMS and MMS, and respective values like whatsapp, MMS, SMS as per the number&apos;s capability.</description>
    <label>Supported Action Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>