force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__TimeStamp__c</fullName>
    <label>TimeStamp</label>
    <type>DateTime</type>
</CustomField>