force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Total_License_For_Virtual_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Total_License_For_Virtual_Number__c</fullName>
    <label>Total License For Virtual Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>