force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__UsedCredit__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__UsedCredit__c</fullName>
    <label>UsedCredit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>