force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__User_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__User_Name__c</fullName>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>