force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/recordTypes/tdc_cti__CTIUserConfig.recordType-meta.xml
<RecordType>
    <fullName>tdc_cti__CTIUserConfig</fullName>
    <active>true</active>
    <label>CTIUserConfig</label>
</RecordType>