force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/recordTypes/tdc_tsw__UserConfig.recordType-meta.xml
<RecordType>
    <fullName>tdc_tsw__UserConfig</fullName>
    <active>true</active>
    <label>UserConfig</label>
</RecordType>